--- a/styles.css
+++ b/styles.css
@@ -7,20 +7,28 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #f0f0f3;
+  background-color: #3B8BEB;
+  overflow: hidden; /* Hide scrollbar */
+
 }
 
 .container {
   display: flex;
-  width: 90%;
-  height: 90%;
-  max-width: 1200px;
-  margin: 40px auto;
+  width: 100%;
+  height: 100%;
+  max-width: 100%;
+  margin: 0;
   padding: 40px;
-  background-color: #f0f0f3;
+  background-color: #686b6d;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.1);
   border-radius: 20px;
-  overflow: auto;
+  overflow-y: scroll; /* Enable vertical scrolling */
+  -ms-overflow-style: none; /* Internet Explorer 10+ */
+  scrollbar-width: none; /* Firefox */
+}
+
+.container::-webkit-scrollbar {
+  display: none; /* Safari and Chrome */
 }
 
 .sidebar {
@@ -69,7 +77,7 @@ body {
 
 .sidebar ul li a:hover {
   box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.2), -6px -6px 12px rgba(255, 255, 255, 0.7); /* Adjusted shadow on hover */
-  background-color: #007bff; /* Background color on hover */
+  background-color: #686b6d; /* Background color on hover */
   color: #fff; /* Text color on hover */
   transform: translateY(-5px); /* Lift effect on hover */
 }
@@ -86,7 +94,7 @@ body {
 .heading {
   font-size: 28px;
   margin-bottom: 20px;
-  color: #333;
+  color: #131212;
   background-color: #f0f0f3;
   border-radius: 20px;
   box-shadow: 10px 10px 20px #bebebe, -10px -10px 20px #ffffff;
@@ -98,9 +106,11 @@ body {
   display: flex;
   justify-content: space-between;
   margin-bottom: 20px;
+  gap: 20px; /* Add a gap between the dropdowns */
 }
 
 .dropdown {
+  flex: 1;
   padding: 10px;
   border: none;
   border-radius: 10px;
@@ -109,7 +119,7 @@ body {
   appearance: none;
   outline: none;
   font-size: 16px;
-  color: #333;
+  color: #0e0c0c;
   transition: box-shadow 0.3s ease;
 }
 
@@ -130,20 +140,15 @@ body {
   padding: 15px;
   text-align: center;
   background-color: #f0f0f3;
-  color: #333;
+  color: #100f0f;
   cursor: pointer;
   transition: background-color 0.3s ease, box-shadow 0.3s ease;
 }
 
-.tab.active {
-  background-color: #007bff;
-  color: #fff;
-  box-shadow: inset 4px 4px 8px rgba(0, 0, 0, 0.1), inset -4px -4px 8px rgba(255, 255, 255, 0.5);
-}
 
 .tab:hover {
-  background-color: #0056b3;
-  color: #fff;
+  background-color: #686b6d; /* Background color on hover */
+  color: #fff; /* Text color on hover */
 }
 
 .table-container {
@@ -175,8 +180,8 @@ body {
 .download-btn {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
+  background-color: #DDC1A6;
+  color: #151414;
   text-align: center;
   border: none;
   border-radius: 10px;
@@ -186,7 +191,6 @@ body {
 }
 
 .download-btn:hover {
-  background-color: #0056b3;
   box-shadow: 6px 6px 12px rgba(0, 0, 0, 0.2), -6px -6px 12px rgba(255, 255, 255, 0.7);
 }
 
@@ -225,8 +229,8 @@ body {
 .generate-button {
   margin-left: 10px;
   padding: 10px 20px;
-  background-color: #007bff;
-  color: #fff;
+  background-color: #DDC1A6;
+  color: #151414;
   border: none;
   border-radius: 10px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1), -4px -4px 8px rgba(255, 255, 255, 0.5);
