--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,9 @@
+body {
+  font-family: Arial, sans-serif;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
 .container {
   display: flex;
   width: 100%;
@@ -79,6 +85,7 @@
 
 .heading {
   font-size: 28px;
+  font-family: monospace;
   margin-bottom: 20px;
   color: #131212;
   background-color: #f0f0f3;
