--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@ body {
   padding: 0;
   display: flex;
 }
+
 .container {
   display: flex;
   width: 100%;
@@ -20,11 +21,12 @@ body {
 }
 
 .container::-webkit-scrollbar {
-  display: none; /* Safari and Chrome */
+  display: none; 
 }
 
 .sidebar {
   width: 250px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   background-color: #f0f0f3;
   padding: 20px;
   border-radius: 20px;
@@ -76,6 +78,7 @@ body {
 
 .content {
   flex: 1;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   padding-left: 40px;
   background-color: #f0f0f3;
   border-radius: 20px;
@@ -108,6 +111,7 @@ body {
   border: none;
   border-radius: 10px;
   background-color: #f0f0f3;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1), -4px -4px 8px rgba(255, 255, 255, 0.5);
   appearance: none;
   outline: none;
@@ -177,6 +181,7 @@ body {
   color: #151414;
   text-align: center;
   border: none;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   border-radius: 10px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1), -4px -4px 8px rgba(255, 255, 255, 0.5);
   cursor: pointer;
@@ -225,6 +230,7 @@ body {
   background-color: #DDC1A6;
   color: #151414;
   border: none;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   border-radius: 10px;
   box-shadow: 4px 4px 8px rgba(0, 0, 0, 0.1), -4px -4px 8px rgba(255, 255, 255, 0.5);
   cursor: pointer;
